# WinSecRuntime

./: CMakeLists.txt  README.md
examples/: full_example.cpp
include/: wingurdrt.h
include/WinSecRuntime/: WinSecRuntime.h
include/WinSecRuntime/core/: core.h  secure_runtime.h
include/WinSecRuntime/vm_detect/: vm_detect.h
src/: core.cpp  injection_guard.cpp
